[package]
name = "cacoon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
color-eyre = "0.6.5"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
quickcheck = "1.0.3"

[lib]
name = "cacoon_lib"
path = "src/lib.rs"

[[bin]]
name = "cacoon"
path = "src/main.rs"
